--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,18 @@
-spring.application.name=MasbroShop
+spring.application.name=MedicalSys
 server.port=8080
+
+//Local
 spring.datasource.url=jdbc:mysql://localhost:3307/masbro_shop_DB
 spring.datasource.username=root
 spring.datasource.password=
 
-##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
+//PDN
+##spring.datasource.url=jdbc:mysql://medicalsys.c1s8486imjsq.us-east-2.rds.amazonaws.com:3306/MedicalSys
+##spring.datasource.username=Medicina
+##spring.datasource.password=Medicina123.,
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 ##Crea las tablas apenas se inicia la apliación
 spring.jpa.hibernate.ddl-auto=update
+jdbcCompliantTruncation=false
